playbooks/argocd/applications/security/authentik/database/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-postgresql-ingress
  namespace: authentik
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: authentik-postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 5432
